--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,8 +84,8 @@ services:
       USE_DEMO_DATA: ${USE_DEMO_DATA:-1}
       HC: 1
       NODE_EXTRA_CA_CERTS: /certs/root.crt
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
+#    extra_hosts:
+#      - "host.docker.internal:host-gateway"
     volumes:
       - ./certs:/certs
 
